Clon repositorio Oscar
Primera prueba, añadiendo lineas al fichero "Copy"

--- a/notebooks/Copy_OCG_PC1_Wine_Quality.ipynb
+++ b/notebooks/Copy_OCG_PC1_Wine_Quality.ipynb
@@ -7829,6 +7829,28 @@
    "source": [
     "Ejecutar mi modelo para sacar vinos buenos malos rojos blancos para listar la calidad de vinos y contrastarlo con un clasificador de vino"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51517df8",
+   "metadata": {},
+   "source": [
+    "### Prueba GitHub Alex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "626bb289",
+   "metadata": {},
+   "source": [
+    "Estoy probando a subir contenido al notebook de Óscar con mi Github"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4c80bb5",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
